--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
   <link rel="stylesheet" href="/styles/normalize.css" type="text/css">
   <link rel="stylesheet" href="/styles/styles.css" type="text/css">
   <link rel="stylesheet" href="/styles/queries.css" type="text/css">
-  <script src="/scripts/main.js"></script>
-
 </head>
 
 <body>
+
+  <script>
+    const theme = localStorage.getItem('darkMode') || 'disabled';
+    document.documentElement.dataset.theme = theme;
+  </script>
+  
   <header>
     <nav class="nav main-nav container">
       <a class='site-title' href=''>Badr Elkarfi</a>
@@ -163,6 +167,7 @@
     </nav>
   </footer>
 
+  <script src="/scripts/main.js"></script>
   <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
   <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
