--- a/fr/index.html
+++ b/fr/index.html
@@ -14,16 +14,9 @@
   <link rel="stylesheet" href="../styles/normalize.css" type="text/css">
   <link rel="stylesheet" href="../styles/styles.css" type="text/css">
   <link rel="stylesheet" href="../styles/queries.css" type="text/css">
-
 </head>
 
 <body>
-
-
-  <script>
-    const theme = localStorage.getItem('darkMode') || 'disabled';
-    document.documentElement.dataset.theme = theme;
-  </script>
 
   <header>
     <nav class="nav main-nav container">
@@ -33,16 +26,14 @@
         <span class="menu-separator">|</span>
         <ion-icon id="button" name="moon-outline"></ion-icon>
       </div>
-
-
-
+      
     </nav>
   </header>
   <main class="container">
 
     <section class="hero section">
       <div class="avatar-title">
-        <img class="avatar" src="" alt="Placeholder image" width="75" height="75">
+        <!-- <img class="avatar" src="" alt="Placeholder image" width="75" height="75"> -->
         <h1>Salut, je m'appelle Badr.</h1>
       </div>
 
@@ -76,7 +67,7 @@
           <ion-icon aria-hidden="true" name="logo-discord" title="Discord"></ion-icon>
         </a>
 
-        <a class="icon-link" class="my-link" href="/resume.pdf"> C.V </a>
+        <a class="icon-link" class="my-link" href="../PDF/Cv.pdf"> C.V </a>
 
       </div>
 
@@ -92,7 +83,7 @@
         <ul>
           <li>
             <span class="list-start">
-              <a>REST API insight system</a>
+              <a>REST API Insight System</a>
               (<a href="https://github.com/elkarfi/REST-API-insight-system" target="_blank" rel="noopener">src</a>):
             </span>
             API qui permet aux utilisateurs de recevoir, d'envoyer et d'analyser des enquêtes (Django
@@ -120,6 +111,13 @@
             </span>
             Appliaction web pour les prévisions météorologiques (PHP/Mysql)
           </li>
+          <li>
+            <span class="list-start">
+              <a>Speech Emotion Recognition </a>
+              (<a href="https://github.com/elkarfi/speech_emotion_recognition" target="_blank" rel="noopener">src</a>):
+            </span>
+            Reconnaissance des émotions de la parole (SER) à l'aide de CNN et de MLP 
+          </li>
         </ul>
       </div>
 
@@ -134,19 +132,19 @@
         <ul>
           <li>
             <span class="list-start">Langages: </span>
-            HTML, CSS, JavaScript, Sass/SCSS, Python, SQL
+            HTML, CSS, JavaScript, Java, Python, SQL, Bash
           </li>
           <li>
             <span class="list-start">Langages (secondaires): </span>
-            Go, PHP, TypeScript, C, Bash, Markdown
+            Go, PHP, TypeScript, C, Markdown
           </li>
           <li>
             <span class="list-start">Frameworks: </span>
-            Django, Node.js, React.js, Tailwindcss
+            Django, JavaEE, Tailwindcss, Bootstrap 5 
           </li>
           <li>
             <span class="list-start">Frameworks (secondaires): </span>
-            Flask, FastAPI
+            Node.js, React.js
           </li>
           <li>
             <span class="list-start">Hébergement/Email: </span>
