Add links to both versions

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <ion-icon aria-hidden="true" name="logo-github" title="GitHub"></ion-icon>
         </a>
 
-        <a class="icon-link" href="" target="_blank" rel="noopener" aria-label="Visit LinkedIn profile">
+        <a class="icon-link" href="https://www.linkedin.com/in/badr-elkarfi-72212a297/" target="_blank" rel="noopener" aria-label="Visit LinkedIn profile">
           <ion-icon aria-hidden="true" name="logo-linkedin" title="LinkedIn"></ion-icon>
         </a>
 
@@ -68,7 +68,7 @@
           <ion-icon aria-hidden="true" name="logo-discord" title="Discord"></ion-icon>
         </a>
 
-        <a class="icon-link" class="cv" href="PDF/"> Résumé as PDF </a>
+        <a class="icon-link" class="cv" href="PDF/Cv.pdf"> Résumé </a>
 
       </div>
 
@@ -99,6 +99,14 @@
           Risk management system for identifying, assessing, and controlling security risks (Django/Bootstrap 5)
         </li>
 
+        <li>
+          <span class="list-start">
+            <a>E-Commerce Websites Scraper</a>
+            (<a href="https://github.com/elkarfi/ecommerce-websites-scraper" target="_blank" rel="noopener">src</a>):
+          </span>
+          Scraping products from ecommerce websites (Python, Flask)
+        </li>
+
       </ul>
       </div>
 
@@ -119,9 +127,10 @@
               <a>Speech Emotion Recognition </a>
               (<a href="https://github.com/elkarfi/speech_emotion_recognition" target="_blank" rel="noopener">src</a>):
             </span>
-            A neural network models for detecting different emotions from audio speeches. (Deep Learning, CNN, MLP,
+            A neural network models for detecting different emotions from audio speeches (Deep Learning, CNN, MLP,
             Python)
           </li>
+
         </ul>
       </div>
     </section>
@@ -143,7 +152,7 @@
           </li>
           <li>
             <span class="list-start">Frameworks: </span>
-            Django, JavaEE, Tailwindcss, Bootstrap 5 
+            Django, JavaEE, Tailwindcss, Bootstrap 5, Flask 
           </li>
           <li>
             <span class="list-start">Frameworks (Secondary): </span>
@@ -155,7 +164,7 @@
           </li>
           <li>
             <span class="list-start">Misc: </span>
-            git/GitHub, npm, pip, VSCode, Docker, Mysql, MongoDB, PostgreSQL
+            git/GitHub, npm, Postman API, pip, VSCode, Docker, Mysql, MongoDB, PostgreSQL
           </li>
         </ul>
       </div>
