--- a/fr/index.html
+++ b/fr/index.html
@@ -26,7 +26,7 @@
         <span class="menu-separator">|</span>
         <ion-icon id="button" name="moon-outline"></ion-icon>
       </div>
-      
+
     </nav>
   </header>
   <main class="container">
@@ -58,7 +58,7 @@
           <ion-icon aria-hidden="true" name="logo-github" title="GitHub"></ion-icon>
         </a>
 
-        <a class="icon-link" href="" target="_blank" rel="noopener" aria-label="Visit LinkedIn profile">
+        <a class="icon-link" href="https://www.linkedin.com/in/badr-elkarfi-72212a297/" target="_blank" rel="noopener" aria-label="Visit LinkedIn profile">
           <ion-icon aria-hidden="true" name="logo-linkedin" title="LinkedIn"></ion-icon>
         </a>
 
@@ -75,7 +75,7 @@
 
     <section class="section">
       <h2 class="heading-icon"><ion-icon name="build-outline"></ion-icon></ion-icon>Projets</h2>
-      <p>Ce sont une combinaison d'applications web, API web, et d'autres projets en ligne.</p>
+      <p>Une combinaison d'applications web, API web, et d'autres projets en ligne.</p>
 
       <div class="sub-section">
         <h3>Projets récents</h3>
@@ -96,7 +96,13 @@
             </span>
             Un programme de gestion des risques pour identifier, évaluer, et contrôler les risques (Django/Bootstrap 5)
           </li>
-
+          <li>
+            <span class="list-start">
+              <a>E-Commerce Websites Scraper</a>
+              (<a href="https://github.com/elkarfi/ecommerce-websites-scraper" target="_blank" rel="noopener">src</a>):
+            </span>
+            Web scraper pour les sites de commerce en ligne (Flask, Python) 
+          </li>
         </ul>
       </div>
 
@@ -116,7 +122,7 @@
               <a>Speech Emotion Recognition </a>
               (<a href="https://github.com/elkarfi/speech_emotion_recognition" target="_blank" rel="noopener">src</a>):
             </span>
-            Reconnaissance des émotions de la parole (SER) à l'aide de CNN et de MLP 
+            Un système de reconnaissance des émotions à travers la parole (Deep Learning, CNN, MLP)  
           </li>
         </ul>
       </div>
@@ -140,7 +146,7 @@
           </li>
           <li>
             <span class="list-start">Frameworks: </span>
-            Django, JavaEE, Tailwindcss, Bootstrap 5 
+            Django, JavaEE, Tailwindcss, Bootstrap 5, Flask
           </li>
           <li>
             <span class="list-start">Frameworks (secondaires): </span>
@@ -152,7 +158,7 @@
           </li>
           <li>
             <span class="list-start">Divers: </span>
-            git/GitHub, npm, pip, VSCode, Docker, Mysql, MongoDB, PostgreSQL
+            Git/GitHub, npm, Postman API, pip, VSCode, Docker, Mysql, MongoDB, PostgreSQL
           </li>
         </ul>
       </div>
