Add target attribute _blank

--- a/fr/index.html
+++ b/fr/index.html
@@ -67,7 +67,7 @@
           <ion-icon aria-hidden="true" name="logo-discord" title="Discord"></ion-icon>
         </a>
 
-        <a class="icon-link" class="my-link" href="../PDF/Cv.pdf"> C.V </a>
+        <a class="icon-link" class="my-link" href="../PDF/Cv.pdf" target="_blank" > C.V </a>
 
       </div>
 
