--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ion-icon aria-hidden="true" name="logo-discord" title="Discord"></ion-icon>
         </a>
 
-        <a class="icon-link" class="cv" href="PDF/Cv.pdf"> Résumé </a>
+        <a class="icon-link" class="cv" href="PDF/Cv.pdf" target="_blank" > Résumé </a>
 
       </div>
 
